gccida/c3/eh_data_format_name
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eh_data_format_name/src/dwarf2asm.c:812:49: error: use of undeclared identifier 'eh_data_format_name_format_names'
if ( ( unsigned int)format > 0xFF || ( result = eh_data_format_name_format_names[format]) == 0LL ) 
                                                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eh_data_format_name/src/obj/dwarf2asm.o] Error 1
